--- a/albums.html
+++ b/albums.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="albums.css">
     <title>Albums</title>
 </head>
@@ -13,8 +14,10 @@
             JSONPLACEHOLDER ALBUMS
        </h5>
     </div>
-    <div class="app">
+    <div class="column">
+        <div class="app">
 
+        </div>
     </div>
     <script src="albums.js"></script>
 </body>
