--- a/photos.html
+++ b/photos.html
@@ -13,9 +13,14 @@
             JSONPLACEHOLDER PHOTOS
         </h2>
     </div>
-    <div class="container">
+    <div>
+        <a href="show.html">
+            <div class="container">
 
+            </div>
+        </a>
     </div>
+    
     <script src="photos.js"></script>
 </body>
 </html>
